sbuild (0.63.0-1) unstable; urgency=low

  [ Wookey ]
  * Merge cross-build support (thanks to Hector Oron)

 -- Roger Leigh <rleigh@debian.org>  Thu, 15 Dec 2011 13:03:01 +0000

sbuild (0.62.6-1) unstable; urgency=low

  * New release.
  * All changes backported from buildd-0.61.0 branch.
  * sbuild.1: Add --chroot to synopsis (Closes: #635203).
  * sbuild:
    - --jobs is an alias for -j, to match documented behaviour
      (Closes: #635250).
    - The use of alternatives in Build-Depends and Build-Depends-Indep
      may be turned on or off by the configuration variable
      $resolve_alternatives.  It may also be enabled or disabled at
      build time using the --resolve-alternatives and
      --no-resolve-alternatives options, respectively.
    - Correctly support chroot namespaces, to work with schroot 1.5.x
      (Closes: #612630).
    - Support Build-Depends-Arch and Build-Conflicts-Arch fields in
      debian/control.  These may be manually set with
      --add-depends-arch and --add-conflicts-arch, respectively.

 -- Roger Leigh <rleigh@debian.org>  Wed, 07 Dec 2011 20:41:43 +0000

sbuild (0.62.5-1) unstable; urgency=low

  * New release.
  * sbuild:
    - Correct use of Dpkg::Version for version parsing, to ensure
      correct behaviour when using native package versions and epochs.
    - Don't require an exact version when building a package directly
      from a source tree.

 -- Roger Leigh <rleigh@debian.org>  Wed, 13 Jul 2011 19:56:05 +0100

sbuild (0.62.4-1) unstable; urgency=low

  * New release.
  * sbuild:
    - Failing lintian checks are highlighted in red, and passes in
      green (Closes: #631060).
    - The distribution in the build summary is coloured yellow if it
      does not match the distribution in the changelog.  This is to
      indicate that there may be a potential problem, such as
      potentially uploading a package intended for experimental to
      unstable by building for unstable by accident.